--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -18,3 +18,15 @@ jobs:
       with:
         name: hello-artifact
         path: hello.txt
+        
+  download:
+    runs-on: unbuntu-latest
+
+    steps:
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v4.2.1
+      with:
+        name: ./artifacts
+
+    - name: Display file contents
+      run: cat ./artifacts/hello.txt
