--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -18,3 +18,16 @@ jobs:
       with:
         name: hello-artifact
         path: hello.txt
+
+  download:
+    runs-on: ubuntu-latest
+
+    steps:
+     - name: Download a Build Artifact
+      uses: actions/download-artifact@v4.2.1
+      with:
+        # Name of the artifact to download. If unspecified, all artifacts for the run are downloaded.
+        name: ./artifacts
+
+    - name: Display contents of the file
+      run: cat ./artifacts/hello.txt 
