--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -27,7 +27,8 @@ jobs:
        uses: actions/download-artifact@v4.2.1
        with:
         # Name of the artifact to download. If unspecified, all artifacts for the run are downloaded.
-        name: ./artifacts
+        name: Artifacts path
+        path: ./artifacts
 
      - name: Display contents of the file
        run: cat ./artifacts/hello.txt 
